hot reload pipelines - copy files from new image and reload the server

--- a/charts-config.yaml
+++ b/charts-config.yaml
@@ -3,3 +3,5 @@ pipelines:
     commit-message: automatic update of knesset-data-pipelines
     deployment-name: pipelines
     container-name: pipelines
+    app-name: pipelines
+    pipelines-hot-reload: true
