permanent redirect alternative oknesset domains to oknesset.org

--- a/charts-external/nginx/templates/configmap.yaml
+++ b/charts-external/nginx/templates/configmap.yaml
@@ -37,7 +37,13 @@ data:
 
     server {
       listen 80;
-      server_name oknesset.org www.oknesset.org committees-next.oknesset.org;
+      server_name www.oknesset.org committees-next.oknesset.org;
+      return 301 https://oknesset.org$request_uri;
+    }
+
+    server {
+      listen 80;
+      server_name oknesset.org;
       location / {
         proxy_pass http://pipelines:8080/;
       }
