--- a/charts-external/nginx/templates/deployment.yaml
+++ b/charts-external/nginx/templates/deployment.yaml
@@ -28,6 +28,12 @@ spec:
           mountPath: /etc/nginx/htpasswd
           readOnly: true
         {{ end }}
+        {{ if .Values.pipelinesDataNfsServer }}
+        - name: pipelines-data
+          mountPath: /pipelines/data
+          subPath: data
+          readOnly: true
+        {{ end }}
       volumes:
       - name: nginx-conf
         configMap:
@@ -36,5 +42,11 @@ spec:
       - name: nginx-htpasswd
         secret:
           secretName: {{ .Values.htpasswdSecretName }}
+      {{ end }}
+      {{ if .Values.pipelinesDataNfsServer }}
+      - name: pipelines-data
+        nfs:
+          server: {{ .Values.pipelinesDataNfsServer }}
+          path: "/"
       {{ end }}
 {{ end }}
