add publicdb pvc, disable hot reload (not needed with nfs)

--- a/charts-config.yaml
+++ b/charts-config.yaml
@@ -4,4 +4,4 @@ pipelines:
     deployment-name: pipelines
     container-name: pipelines
     app-name: pipelines
-    pipelines-hot-reload: true
+#    pipelines-hot-reload: true
