--- a/charts-external/pipelines/templates/tika-deployment.yaml
+++ b/charts-external/pipelines/templates/tika-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: tika
         image: logicalspark/docker-tikaserver
-        resources: {"requests": {"cpu": "200m", "memory": "1Gi"}, "limits": {"memory": "2Gi"}}
+        resources: {"requests": {"cpu": "200m", "memory": "1Gi"}, "limits": {"cpu": "600m", "memory": "2Gi"}}
         ports:
         - containerPort: 9998
 {{ end }}
