add kube-ip-dns-updater to publicdb hostport --no-deploy

--- a/charts-external/publicdb/templates/deployment.yaml
+++ b/charts-external/publicdb/templates/deployment.yaml
@@ -16,6 +16,20 @@ spec:
         {{ .Values.nodeSelector }}
       {{ end }}
       terminationGracePeriodSeconds: 5
+      {{ if .Values.kubeIpDnsUpdaterSecret }}
+      serviceAccountName: {{ .Values.kubeIpDnsUpdaterServiceAccountName | quote }}
+      initContainers:
+      - name: dns
+        image: orihoch/kube-ip-dns-updater:v0.0.8
+        envFrom:
+        - secretRef:
+            name: {{ .Values.kubeIpDnsUpdaterSecret | quote }}
+        env:
+        - name: K8S_NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+      {{ end }}
       containers:
       - name: publicdb
         image: "postgres"
