--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -37,6 +37,14 @@ publicdb:
   # kubectl create secret generic redash-reader --from-literal=REDASH_READER_PASSWORD=***
   redashReaderSecret: redash-reader
   secretName: publicdb
-  nodeSelector: 'oknesset-postgres: "true"'
+  # publicdb uses kube-ip-dns-updater side container which updates dns if node changes
+  nodeSelector: 'kubernetes.io/hostname: gke-hasadna-cluster-pool-4-2f6c125a-9bwg'
   # kubectl get nodes -l oknesset-postgres=true -o 'jsonpath={.items[0].status.addresses[?(@.type=='"'"'ExternalIP'"'"')].address}'
   enableHostPort: true
+  # see https://github.com/OriHoch/kube-ip-dns-updater
+  kubeIpDnsUpdaterSecret: publicdb-dns-updater
+  # see environments/production/publicdb-kube-ip-dns-updater-rbac.yaml
+  kubeIpDnsUpdaterServiceAccountName: oknesset-publicdb-kube-ip-dns-updater
+
+web-ui:
+  enabled: true
