move to kamatera cluster --no-deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services:
 - docker
 install:
-- curl -L https://raw.githubusercontent.com/hasadna/hasadna-k8s/master/apps_travis_script.sh | bash /dev/stdin install_helm;
+- bash .travis_deploy.sh install_helm
 script:
 - bash helm_lint_all.sh
 deploy:
