--- a/charts-external/pipelines/templates/nfs-deployment.yaml
+++ b/charts-external/pipelines/templates/nfs-deployment.yaml
@@ -1,4 +1,5 @@
 {{ if and .Values.enabled .Values.enableNfs }}
+{{ if  .Values.nfsGcePersistentDiskName }}
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -37,4 +38,5 @@ spec:
           {{ else }}
           emptyDir: {}
           {{ end }}
+{{ end }}
 {{ end }}
