--- a/charts-external/pipelines/templates/nfs-service.yaml
+++ b/charts-external/pipelines/templates/nfs-service.yaml
@@ -1,4 +1,5 @@
 {{ if and .Values.enabled .Values.enableNfs }}
+{{ if  .Values.nfsGcePersistentDiskName }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,4 +14,5 @@ spec:
     port: 111
   selector:
     app: nfs
+{{ end }}
 {{ end }}
