--- a/charts-external/publicdb/templates/deployment.yaml
+++ b/charts-external/publicdb/templates/deployment.yaml
@@ -1,9 +1,12 @@
 {{ if .Values.enabled }}
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: publicdb
 spec:
+  selector:
+    matchLabels:
+      app: publicdb
   replicas: 1
   strategy: {type: "Recreate"}
   template:
@@ -32,7 +35,7 @@ spec:
       {{ end }}
       containers:
       - name: publicdb
-        image: "postgres"
+        image: "postgres:10"
         ports:
         - containerPort: 5432
           {{ if .Values.enableHostPort }}hostPort: 5432{{ end }}
@@ -81,6 +84,12 @@ spec:
       {{ end }}
       volumes:
       - name: data
+        {{ if and .Values.nfsServer .Values.nfsServerPath }}
+        nfs:
+          server: {{ .Values.nfsServer }}
+          path: {{ .Values.nfsServerPath | default "/" | quote }}
+        {{ else }}
         persistentVolumeClaim:
           claimName: oknesset-publicdb-gcepd
+        {{ end }}
 {{ end }}
