--- a/charts-external/pipelines/templates/deployment.yaml
+++ b/charts-external/pipelines/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               key: "SSH_B64_KEY"
       - name: pipelines
         image: {{ .Values.image | quote }}
-        resources: {"requests": {"cpu": "548m", "memory": "1568Mi"}, "limits": {"cpu": "1200m", "memory": "3Gi"}}
+        resources: {"requests": {"cpu": "1388m", "memory": "3151Mi"}, "limits": {"cpu": "2000m", "memory": "4000Mi"}}
         command:
         - "/dpp/docker/run.sh"
         - server-reload
