--- a/apps/publicdb/templates/vertical-pod-autoscalers.yaml
+++ b/apps/publicdb/templates/vertical-pod-autoscalers.yaml
@@ -8,5 +8,7 @@ spec:
     apiVersion: {{ .apiVersion }}
     kind: {{ .kind }}
     name: {{ .name }}
+  updatePolicy:
+    updateMode: "Off"
 ---
 {{ end }}
