--- a/apps/workflows/templates/pipeline-run-service-account.yaml
+++ b/apps/workflows/templates/pipeline-run-service-account.yaml
@@ -9,7 +9,10 @@ metadata:
   name: pipeline-run
 rules:
 - apiGroups: [""]
-  resources: ["pods", "deployments"]
+  resources: ["pods"]
+  verbs: ["get", "list"]
+- apiGroups: ["apps"]
+  resources: ["deployments"]
   verbs: ["get", "list"]
 - apiGroups: [""]
   resources: ["pods/exec"]
