--- a/apps/pipelines/values-hasadna.yaml
+++ b/apps/pipelines/values-hasadna.yaml
@@ -34,6 +34,7 @@ secrets:
   - name: airflow
     data:
       admin_password: "~vault:Projects/oknesset/k8s-secrets:airflow-admin-password~"
+      google-service-account-key-json: "~vault:Projects/oknesset/k8s-secrets:google-service-account-key-json~"
 
 ingresses:
   - name: airflow
