update oknesset allowed ips node selector / label

--- a/apps/pipelines/templates/deployment.yaml
+++ b/apps/pipelines/templates/deployment.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: pipelines
     spec:
+      nodeSelector:
+        # This node label is updated by apps/openbus/bin/update_node_allowed_ips.py script
+        oknesset-allowed-ip: "true"
       terminationGracePeriodSeconds: 5
       containers:
       - name: ssh-socks-proxy
