--- a/apps/pipelines/templates/airflow-scheduler-deployment.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       labels:
         app: airflow-scheduler
     spec:
+      nodeSelector:
+        # This node label is updated by apps/openbus/bin/update_node_allowed_ips.py script
+        oknesset-allowed-ip: "true"
       terminationGracePeriodSeconds: 240
       containers:
         - name: scheduler
