--- a/apps/pipelines/templates/airflow-scheduler-deployment.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-deployment.yaml
@@ -71,6 +71,7 @@ spec:
               mountPath: /var/airflow
             - name: data
               mountPath: /data
+              subPath: data
             - name: airflow-secret
               subPath: google-service-account-key-json
               mountPath: /var/airflow-google-service-account/key.json
