--- a/apps/site/templates/backend-deployment.yaml
+++ b/apps/site/templates/backend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: backend
         image: {{ .Values.backendImage }}
-        resources: {{ .Values.backendResources }}
+        resources: {{ .Values.backendResources | toYaml | nindent 10 }}
         env:
         - name: OKNESSET_DB_HOST
           value: publicdb
