--- a/apps/site/values.yaml
+++ b/apps/site/values.yaml
@@ -1,11 +1,20 @@
 backendResources: {"requests": {"cpu": "500m", "memory": "500Mi"}, "limits": {"memory": "1000Mi"}}
 frontendResources: {"requests": {"cpu": "100m", "memory": "100Mi"}, "limits": {"memory": "200Mi"}}
 
+db:
+  resources: {"requests": {"cpu": "50m", "memory": "250Mi"}, "limits": {"memory": "500Mi"}}
+  nfsServer: 172.16.0.9
+  nfsPath: /oknesset/site-db
+  nodePort: 30379
+
 secrets:
   - name: publicdb-readonly
     data:
       USER: "~vault:Projects/oknesset/db_redash_reader:user~"
       PASSWORD: "~vault:Projects/oknesset/db_redash_reader:password~"
+  - name: site-db
+    data:
+      password: "~vault:Projects/oknesset/k8s-secrets:site-db-password~"
 
 ingresses:
   - name: backend
