--- a/apps/pipelines/templates/airflow-scheduler-deployment.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-deployment.yaml
@@ -66,6 +66,8 @@ spec:
               valueFrom: {"secretKeyRef": {"name": "airflow", "key": "admin_password" }}
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: "/var/airflow-google-service-account/key.json"
+            - name: GOOGLE_SERVICE_ACCOUNT_JSON
+              valueFrom: {"secretKeyRef": {"name": "airflow", "key": "google-service-account-key-json" }}
           volumeMounts:
             - name: airflow-home
               mountPath: /var/airflow
