--- a/apps/pipelines/templates/airflow-scheduler-rbac.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-rbac.yaml
@@ -11,6 +11,9 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
