add dante socks proxy

--- a/apps/pipelines/dante/Dockerfile
+++ b/apps/pipelines/dante/Dockerfile
@@ -1,5 +1,9 @@
 FROM debian:bullseye-slim
 RUN apt-get update && \
-    apt-get install -y dante-server && \
+    apt-get install -y dante-server libpam-pwdfile openssl && \
     rm -rf /var/lib/apt/lists/*
-# CMD ["danted", "-f", "/etc/dante.conf"]
+RUN mkdir /etc/dante
+COPY dante.conf /etc/dante/dante.conf
+COPY entrypoint.sh /entrypoint.sh
+EXPOSE 1080
+ENTRYPOINT ["/entrypoint.sh"]
