--- a/apps/pipelines/dante/dante.conf
+++ b/apps/pipelines/dante/dante.conf
@@ -1,15 +1,10 @@
-logoutput: stderr
+logoutput: stdout
 internal: 0.0.0.0 port=1080
 external: eth0
 socksmethod: username
 clientmethod: none
 user.privileged: root
 user.unprivileged: nobody
-
-user: {
-    username: your_username
-    password: your_password
-}
 
 client pass {
     from: 0.0.0.0/0 to: 0.0.0.0/0
