--- a/apps/publicdb/values-hasadna.yaml
+++ b/apps/publicdb/values-hasadna.yaml
@@ -1,7 +1,7 @@
 enabled: true
 resources: >
   {"requests": {"cpu": "78m", "memory": "2Gi"}, "limits": {"cpu": "300m", "memory": "3Gi"}}
-adminerEnabled: true
+adminerEnabled: false
 nfsServer: "172.16.0.9"
 nfsServerPath: "/mnt/sdb3/srv/default/oknesset/publicdb/data/oknesset-publicdb-gcepd"
 # kubectl create secret generic redash-reader --from-literal=REDASH_READER_PASSWORD=***
