--- a/apps/publicdb/templates/deployment.yaml
+++ b/apps/publicdb/templates/deployment.yaml
@@ -58,23 +58,23 @@ spec:
           # postgres doesn't let you use the root of a disk (it complaints about having lost+found directory)
           subPath: dbdata
         {{ if .Values.redashReaderSecret }}
-        lifecycle:
-          postStart:
-            exec:
-              command:
-              - bash
-              - "-c"
-              - |
-                while ! su -c 'psql -c "select 1;"' postgres; do
-                  sleep 1
-                  echo .
-                done
-                su -c 'psql -c "SELECT 1 FROM pg_roles WHERE rolname='"'USR_NAME'"';"' postgres ||\
-                su -c 'psql -c "CREATE ROLE readaccess; GRANT USAGE ON SCHEMA public TO readaccess;
-                GRANT SELECT ON ALL TABLES IN SCHEMA public TO readaccess;
-                ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT SELECT ON TABLES TO readaccess;
-                CREATE USER redash_reader WITH PASSWORD '"'${REDASH_READER_PASSWORD}'"';
-                GRANT readaccess TO redash_reader;"' postgres
+        # lifecycle:
+        #   postStart:
+        #     exec:
+        #       command:
+        #       - bash
+        #       - "-c"
+        #       - |
+        #         while ! su -c 'psql -c "select 1;"' postgres; do
+        #           sleep 1
+        #           echo .
+        #         done
+        #         su -c 'psql -c "SELECT 1 FROM pg_roles WHERE rolname='"'USR_NAME'"';"' postgres ||\
+        #         su -c 'psql -c "CREATE ROLE readaccess; GRANT USAGE ON SCHEMA public TO readaccess;
+        #         GRANT SELECT ON ALL TABLES IN SCHEMA public TO readaccess;
+        #         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT SELECT ON TABLES TO readaccess;
+        #         CREATE USER redash_reader WITH PASSWORD '"'${REDASH_READER_PASSWORD}'"';
+        #         GRANT readaccess TO redash_reader;"' postgres
         {{ end }}
       {{ if .Values.adminerEnabled }}
       - name: adminer
