--- a/apps/pipelines/templates/airflow-scheduler-deployment.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-deployment.yaml
@@ -69,6 +69,8 @@ spec:
               value: "/var/airflow-google-service-account/key.json"
             - name: GOOGLE_SERVICE_ACCOUNT_JSON
               valueFrom: {"secretKeyRef": {"name": "airflow", "key": "google-service-account-key-json" }}
+            - name: AIRFLOW__CORE__DAGBAG_IMPORT_TIMEOUT
+              value: "120"
           volumeMounts:
             - name: airflow-home
               mountPath: /var/airflow
