--- a/apps/nginx/templates/ingress.yaml
+++ b/apps/nginx/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.ingress }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   {{ if .Values.ingress.tls }}
@@ -14,9 +14,13 @@ spec:
   - host: {{ . }}
     http:
       paths:
-      - backend:
-          serviceName: nginx
-          servicePort: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx
+            port:
+              number: 80
   {{ end }}
   {{ if .Values.ingress.tls }}
   tls:
