Use PVC storage for pipelines, nginx and airflow scheduler

--- a/apps/nginx/templates/deployment.yaml
+++ b/apps/nginx/templates/deployment.yaml
@@ -31,12 +31,17 @@ spec:
           mountPath: /etc/nginx/htpasswd
           readOnly: true
         {{ end }}
-        {{ if .Values.pipelinesDataNfsServer }}
+        {{- if .Values.pipelinesDataNfsServer }}
         - name: pipelines-data
           mountPath: /pipelines/data
           subPath: data
           readOnly: true
-        {{ end }}
+        {{- else if .Values.pipelinesDataPvcName }}
+        - name: pipelines-data
+          mountPath: /pipelines/data
+          subPath: data
+          readOnly: true
+        {{- end }}
       volumes:
       - name: nginx-conf
         configMap:
@@ -46,10 +51,14 @@ spec:
         secret:
           secretName: {{ .Values.htpasswdSecretName }}
       {{ end }}
-      {{ if .Values.pipelinesDataNfsServer }}
-      - name: pipelines-data
-        nfs:
-          server: {{ .Values.pipelinesDataNfsServer }}
-          path: {{ .Values.pipelinesDataNfsServerPath | default "/" | quote }}
-      {{ end }}
+        {{- if .Values.pipelinesDataNfsServer }}
+        - name: pipelines-data
+          nfs:
+            server: {{ .Values.pipelinesDataNfsServer }}
+            path: {{ .Values.pipelinesDataNfsServerPath | default "/" | quote }}
+        {{- else if .Values.pipelinesDataPvcName }}
+        - name: pipelines-data
+          persistentVolumeClaim:
+            claimName: {{ .Values.pipelinesDataPvcName }}
+        {{- end }}
 {{ end }}
