--- a/apps/pipelines/templates/airflow-db-deployment.yaml
+++ b/apps/pipelines/templates/airflow-db-deployment.yaml
@@ -30,5 +30,5 @@ spec:
       volumes:
       - name: data
         nfs:
-          server: {{ .Values.nfsServer | quote }}
+          server: {{ .Values.airflowDb.nfsServer | quote }}
           path: {{ .Values.airflowDb.nfsPath | quote }}
