--- a/apps/pipelines/values-hasadna.yaml
+++ b/apps/pipelines/values-hasadna.yaml
@@ -14,6 +14,7 @@ pvcName: pipelines
 airflowDb:
   image: "postgres:15"
   resources: '{"requests": {"cpu": "200m", "memory": "1000Mi"}, "limits": {"memory": "2000Mi"}}'
+  nfsServer: "172.16.0.9"
   nfsPath: "/oknesset/airflow-db"
 
 airflowWebserver:
