--- a/apps/nginx/templates/deployment.yaml
+++ b/apps/nginx/templates/deployment.yaml
@@ -18,8 +18,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        # Pulled May 26, 2025
-        image: nginx:alpine@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
+        image: nginx:1.16-alpine
         command:
           - /bin/sh
           - -c
