--- a/apps/pipelines/templates/airflow-scheduler-deployment.yaml
+++ b/apps/pipelines/templates/airflow-scheduler-deployment.yaml
@@ -83,9 +83,11 @@ spec:
               mountPath: /var/airflow-google-service-account/key.json
       volumes:
           - name: airflow-home
-            nfs:
-              server: {{ .Values.airflow.nfsServer | quote }}
-              path: {{ .Values.airflow.homeNfsPath | quote }}
+            persistentVolumeClaim:
+              claimName: airflow-home2
+#            nfs:
+#              server: {{ .Values.airflow.nfsServer | quote }}
+#              path: {{ .Values.airflow.homeNfsPath | quote }}
           - name: data
             persistentVolumeClaim:
               claimName: {{ .Values.airflowScheduler.pvcName }}
